crates/normalize/tests/snapshots/cli_snapshots__help_structure_files.snap
---
source: crates/normalize/tests/cli_snapshots.rs
expression: "snapshot_help(&[\"structure\", \"files\"])"
---
List indexed files (with optional prefix filter)

Usage: normalize structure files [OPTIONS] [prefix]

Arguments:
  [prefix]  Filter files by prefix

Options:
      --jsonl                      Output one JSON object per line (for arrays)
  -l, --limit <limit>              Maximum number of files to show
      --pretty                     Human-friendly output with colors and formatting
      --compact                    Compact output without colors (overrides TTY detection)
      --json                       Output machine-readable JSON
  -r, --root <root>                Root directory (defaults to current directory)
      --jq <jq>                    Filter output through jq expression
      --input-schema               Print JSON Schema of the subcommand's input parameters and exit
      --output-schema              Print JSON Schema of the subcommand's return type and exit
      --manual                     Emit the reference manual for the command subtree rooted here and exit
      --params-json <params-json>  Provide all parameters as a JSON object instead of individual flags
  -h, --help                       Print help

Examples:
normalize structure files                    # list all indexed files
normalize structure files src/               # list files under src/
normalize structure files -l 10              # show only the first 10 files
