crates/normalize/tests/snapshots/cli_snapshots__help_structure_rebuild.snap
---
source: crates/normalize/tests/cli_snapshots.rs
expression: "snapshot_help(&[\"structure\", \"rebuild\"])"
---
Rebuild the structural index (symbols, calls, imports, and file tree)

Usage: normalize structure rebuild [OPTIONS]

Options:
      --include <include>          What to extract: symbols, calls, imports (comma-separated)
      --jsonl                      Output one JSON object per line (for arrays)
      --pretty                     Human-friendly output with colors and formatting
      --compact                    Compact output without colors (overrides TTY detection)
      --json                       Output machine-readable JSON
  -r, --root <root>                Root directory (defaults to current directory)
      --jq <jq>                    Filter output through jq expression
      --only <only>                Only include files matching glob patterns
      --exclude <exclude>          Exclude files matching glob patterns
      --input-schema               Print JSON Schema of the subcommand's input parameters and exit
      --full                       Force full rebuild even if incremental is possible
      --output-schema              Print JSON Schema of the subcommand's return type and exit
      --manual                     Emit the reference manual for the command subtree rooted here and exit
      --strict                     Exit non-zero if any tree-sitter grammar is missing (instead of warning and continuing)
      --params-json <params-json>  Provide all parameters as a JSON object instead of individual flags
  -h, --help                       Print help

Walks the project directory, parses source files, and populates the SQLite index
at `.normalize/index.sqlite`. Required before running fact rules or cross-file
navigation commands (referenced-by, dependents, depth-map, etc.).

Examples:
normalize structure rebuild                              # rebuild with all content types
normalize structure rebuild --include symbols            # only extract symbols
normalize structure rebuild --include calls,imports      # extract calls and imports
normalize structure rebuild --only "src/**"              # only index files under src/
normalize structure rebuild --exclude "vendor/**"        # skip vendor directory
