crates/normalize/tests/snapshots/cli_snapshots__help_syntax_node_types.snap
---
source: crates/normalize/tests/cli_snapshots.rs
expression: "snapshot_help(&[\"syntax\", \"node-types\"])"
---
List node kinds and field names for a tree-sitter grammar

Usage: normalize syntax node-types [OPTIONS] [language]

Arguments:
  [language]  Language name (e.g. rust, python, go)

Options:
      --jsonl                      Output one JSON object per line (for arrays)
      --pretty                     Human-friendly output with colors and formatting
      --search <search>            Filter types and fields by substring (case-insensitive)
      --compact                    Compact output without colors (overrides TTY detection)
      --json                       Output machine-readable JSON
      --jq <jq>                    Filter output through jq expression
      --input-schema               Print JSON Schema of the subcommand's input parameters and exit
      --output-schema              Print JSON Schema of the subcommand's return type and exit
      --manual                     Emit the reference manual for the command subtree rooted here and exit
      --params-json <params-json>  Provide all parameters as a JSON object instead of individual flags
  -h, --help                       Print help
