crates/normalize/tests/snapshots/cli_snapshots__help_text_search.snap
---
source: crates/normalize/tests/cli_snapshots.rs
assertion_line: 87
expression: "snapshot_help(&[\"text-search\"])"
---
Search for text patterns in files (fast ripgrep-based search)

Usage: normalize text-search [OPTIONS] <PATTERN>

Arguments:
  <PATTERN>  Regex pattern to search for

Options:
  -r, --root <ROOT>         Root directory (defaults to current directory)
  -l, --limit <LIMIT>       Maximum number of matches to return
  -i, --ignore-case         Case-insensitive search
      --exclude <EXCLUDE>   Exclude files matching patterns or aliases
      --only <ONLY>         Only include files matching patterns or aliases
      --json                Output as JSON
      --jsonl               Output as JSON Lines (one object per line)
      --jq <EXPR>           Filter JSON output with jq expression (implies --json)
      --pretty              Human-friendly output with colors and formatting
      --compact             Compact output without colors (overrides TTY detection)
      --output-schema       Output JSON schema for the command's return type
      --input-schema        Output JSON schema for the command's input arguments
      --params-json <JSON>  Pass command arguments as JSON (overrides CLI args)
  -h, --help                Print help
