crates/normalize/tests/snapshots/cli_snapshots__help_tools_test.snap
---
source: crates/normalize/tests/cli_snapshots.rs
expression: "snapshot_help(&[\"tools\", \"test\"])"
---
Run native test runners

Usage: normalize tools test [OPTIONS] [COMMAND]

Commands:
  run   Run tests with auto-detected or specified runner
  list  List available test runners
  help  Print this message or the help of the given subcommand(s)

Options:
      --jsonl                      Output one JSON object per line (for arrays)
      --pretty                     Human-friendly output with colors and formatting
      --compact                    Compact output without colors (overrides TTY detection)
      --json                       Output machine-readable JSON
      --jq <jq>                    Filter output through jq expression
      --input-schema               Print JSON Schema of the subcommand's input parameters and exit
      --output-schema              Print JSON Schema of the subcommand's return type and exit
      --manual                     Emit the reference manual for the command subtree rooted here and exit
      --params-json <params-json>  Provide all parameters as a JSON object instead of individual flags
  -h, --help                       Print help
  -V, --version                    Print version

Examples:
normalize tools test run             # run auto-detected test runner
normalize tools test list            # list available test runners
