crates/normalize/tests/snapshots/cli_snapshots__help_trend.snap
---
source: crates/normalize/tests/cli_snapshots.rs
expression: "snapshot_help(&[\"trend\"])"
---
Plot metrics over git history. Use to see if complexity, size, or test coverage is trending up or down.

Usage: normalize trend [OPTIONS] [COMMAND]

Commands:
  multi       Track multiple health metrics (complexity, length, test ratio, density) over git history.
  complexity  Show how average cyclomatic complexity has changed over git history.
  length      Show how average function length has changed over git history.
  density     Show how information density has changed over git history.
  test-ratio  Show how the test-to-code ratio has changed over git history.
  help        Print this message or the help of the given subcommand(s)

Options:
      --pretty                     Human-friendly output with colors and formatting
      --compact                    Compact output without colors (overrides TTY detection)
      --jsonl                      Output one JSON object per line (for arrays)
      --json                       Output machine-readable JSON
      --jq <jq>                    Filter output through jq expression
      --input-schema               Print JSON Schema of the subcommand's input parameters and exit
      --output-schema              Print JSON Schema of the subcommand's return type and exit
      --manual                     Emit the reference manual for the command subtree rooted here and exit
      --params-json <params-json>  Provide all parameters as a JSON object instead of individual flags
  -h, --help                       Print help
  -V, --version                    Print version
